# wrist2blec

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  prj.conf
boards/arm/eigen_blec_nrf52833/: Kconfig.defconfig  Kconfig.eigen_blec_nrf52833  board.cmake  board.yml  eigen_blec_nrf52833-pinctrl.dtsi  eigen_blec_nrf52833.dts  eigen_blec_nrf52833.yaml  eigen_blec_nrf52833_defconfig
docs/: DEBUG.md
drivers/: icm_42688_tokmas.c  icm_42688_tokmas2.c  icm_42688p.c  icm_42688p.h  icm_42688p_.h  lis3mdl.c  lis3mdl.h  spi_nrf52.c
scripts/: flash_rtt.sh  strip_uicr_hex.py
src/: _common.c  alg.c  alg_position.c  alg_position_xy.c  alg_position_xy2.c  alg_position_xy3.c  alg_position_xy4 copy.c  alg_position_xy4.c  alg_position_xy_device.c  alg_posture.c  alg_posture2.c  ble.c  ble_aaaa.c  ble_aaaa_aae_imu.c  ble_aaaa_aaf_eeg.c  ble_conn.c  main.c  main.cbackup  pba.c  presistence.c  storage.c  task_imu.c
src/inc/: _common.h  alg.h  alg_position.h  alg_posture.h  ble.h  ble_aaaa.h  ble_aaaa_priv.h  ble_conn.h  pba.h  persistence.h  storage.h  task_imu.h
